-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
osd_otable_it_next() in osd-zfs can leave the spinlock locked because of race:
if (!scrub->os_full_speed) spin_lock(&scrub->os_lock); it->ooi_prefetched--; if (!scrub->os_full_speed) { if (scrub->os_waiting) { scrub->os_waiting = 0; wake_up_all(&thread->t_ctl_waitq); } spin_unlock(&scrub->os_lock); }
os_full_speed may chane in-between which sometimes happens in my testing.
- is duplicated by
-
LU-13458 sanity-lfsck: test_35 TIMEOUT
-
- Resolved
-